layout issue due to bad structure formatting

--- a/public/css/root.css
+++ b/public/css/root.css
@@ -4,10 +4,9 @@
     --tertiary-color: #04293a91;
     --bg-color: #000f1d;
     --accent-color: #a9a8a8;
-    --hover-color: #3cffa1;
+    --hover-color: #00da71;
     --error-color: #E53935;
     --success-color: #00ff0d;
     --warning-color: #FFEB3B;
-
     --font-family: 'Montserrat', sans-serif;
 }
